# crapquants

./: .crapquants.toml.sample  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml  publish.yml  quality-gate.yml
data/: baseline.json
docs/: Distribution - crapquants_blog_post.md  architecture.md
docs/frameworks/: crapquants_feathers_framework.md  crapquants_ford_framework.md  crapquants_fowler_framework.md  crapquants_hunt_thomas_framework.md  crapquants_ousterhout_framework.md  crapquants_tornhill_framework.md
src/crapquants/: __init__.py  cli.py
src/crapquants/ai_explain/: __init__.py  explainer.py  provider.py
src/crapquants/baseline/: __init__.py  compare.py  save.py
src/crapquants/core/: __init__.py  ast_visitors.py  complexity.py  coverage_parser.py  crap.py  merge.py
src/crapquants/frameworks/: __init__.py  feathers.py  ford.py  fowler.py  hunt_thomas.py  ousterhout.py  tags.py  tornhill.py
src/crapquants/git/: __init__.py  churn.py  coupling.py  knowledge.py  log_parser.py  trends.py
src/crapquants/mutation/: __init__.py  mutmut_runner.py
src/crapquants/reporting/: __init__.py  sarif.py  (+5 more)
tests/: __init__.py  test_ai_explain.py  test_ast_visitors.py  test_baseline.py  test_cli.py  test_coverage_parser.py  test_crap.py  test_feathers.py  test_fowler.py  test_git.py  test_hunt_thomas.py  test_merge.py  test_mutation.py  test_ousterhout.py  test_reporting.py  test_security.py  test_tornhill_ford.py
(+7 files in other folders)
